src/webapp/kubernates/route.yml
apiVersion: v1
kind: Route
metadata:
  name: webapp-route
spec:
  host: app.salimon.ir
  to:
    kind: Service
    name: webapp-service
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  port:
    targetPort: 80
